Project expungement {
  database_type: 'PostgreSQL'

  Note: '''
    # Virginia Court Data DB

    These docs are for the PostGreSQL DB supporting
    the Virginia Court Data Expungement Project. 

    [GitHub Repo](https://github.com/code-for-charlottesville/LAJC-expungement)

    [Project Page](https://www.codeforcville.org/lajc-expungement)
  '''
}

Table "charges" {
  "id" integer [pk, unique, increment, Note: 'Unique identifier for one charge for a single individual']
  "person_id" bigint [Note: 'Identifier for a single individual']
  "hearing_date" date [Note: 'Court hearing date for criminal charge']
  "code_section" text [Note: 'Relevant section of VA criminal code for the charge']
  "charge_type" text [Note: 'Category of charge type (felony, etc)']
  "charge_class" text [Note: 'Class of charge severity']
  "disposition_code" text [Note: 'Court\'s final determination on a charge']
  "plea" text [Note: 'Defendant\'s plea for charge']
  "race" text [Note: 'Race of the charged individual']
  "sex" text [Note: 'Sex of the charged individual']
  "fips" integer [Note: 'FIPS code for the location of the court']

  Note: '''
    Virginia courts criminal charge data, with one
    row per charge. 
  '''
}

Table "features" {
  "charge_id" integer [ref: > charges.id]
  "run_id" text [Note: 'Identifier for a single classification run']
  "disposition_type" text [Note: 'Conviction, Dismissed, or Deferral Dismissal']
  "charge_type" text [Note: 'Felony vs. Misdemeanor']
  "code_section_category" text [Note: '']
  "has_convictions" boolean [Note: '']
  "last_hearing_date" date [Note: '']
  "last_felony_conviction_date" date [Note: '']
  "next_conviction_date" date [Note: '']
  "last_hearing_delta" numeric [Note: '']
  "last_felony_conviction_delta" numeric [Note: '']
  "next_conviction_delta" numeric [Note: '']
  "from_present_delta" numeric [Note: '']
  "arrest_disqualifier" boolean [Note: '']
  "felony_conviction_disqualifier" boolean [Note: '']
  "next_conviction_disqualifier_after_misdemeanor" boolean [Note: '']
  "next_conviction_disqualifier_after_felony" boolean [Note: '']
  "pending_after_misdemeanor" boolean [Note: '']
  "pending_after_felony" boolean [Note: '']
  "is_class_1_or_2" boolean [Note: 'Is the charge a class 1 or 2 offense?']
  "is_class_3_or_4" boolean [Note: 'Is the charge a class 3 or 4 offense?']

  Note: '''
    Necessary features for the expungement eligibility
    classification of criminal records. 
  '''
}

Table "outcomes" {
  "charge_id" integer [ref: > charges.id]
  "run_id" text [Note: 'Identifier for a single classification run']
  "expungability" text [Note: 'Eligibility for expungement']
  
  Note: 'Expungement eligibility classification results by `run_id`'
}

Ref: outcomes.(charge_id, run_id) - features.(charge_id, run_id)
